--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shiny Live Apps</title>
+    <link href="index.css" rel="stylesheet"/>
   </head>
   <body>
-    <a href="./site/SampleSizeGaussianMean/">Sample size for a Gaussian mean</a>
+    
+    <ul>
+      <li>
+        <a href="./site/SampleSizeGaussianMean/">Sample size for a Gaussian mean</a>
+      </li>
+    </ul>
+    
   </body>
 </html>
