strange surface app

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
       <li>
         <a href="./site/SampleSizeGaussianMean/">Sample size for a Gaussian mean</a>
       </li>
+      <li>
+        <a href="./site/StrangeSurface/">A strange surface</a>
+      </li>
     </ul>
     
   </body>
