--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
       <li>
         <a href="./site/StrangeSurface/">A strange surface</a>
       </li>
+      <li>
+        <a href="./site/PlasmaEffect/">Plasma effect</a>
+      </li>
     </ul>
     
   </body>
