--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="index.css" rel="stylesheet"/>
   </head>
   <body>
+    <a id="github" href="https://github.com/stla/ShinyLive"></a>
     
     <ul>
       <li>
