--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
       <li>
         <a href="./site/PlasmaEffect/">Plasma effect</a>
       </li>
+      <li>
+        <a href="./site/Voronoi/">Voronoï diagrams</a>
+      </li>
     </ul>
     
   </body>
