--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
       <li>
         <a href="./site/Voronoi/">Voronoï diagrams</a>
       </li>
+      <li>
+        <a href="./site/experiments/">Some experiments</a>
+      </li>
     </ul>
     
   </body>
